Temporarily disable test_protected_mode on Slurm scheduler plugin
Currently aws-parallelcluster-node is pinned to `release-3.2` on the scheduler
plugin due to incompatibilities with features recently implemented in the
parallelcluster daemons. This means the workaround for the nodes stuck in a bad
state cannot be implemented in the plugin.

Signed-off-by: Jacopo De Amicis <jdamicis@amazon.it>

--- a/tests/integration-tests/configs/common/common.yaml
+++ b/tests/integration-tests/configs/common/common.yaml
@@ -465,12 +465,13 @@ schedulers:
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
         oss: ["alinux2"]
         schedulers: ["slurm"]
-{%- if SCHEDULER_PLUGIN_TESTS is not defined or SCHEDULER_PLUGIN_TESTS == true %}
-      - regions: ["eu-west-2"]
-        instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: ["alinux2"]
-        schedulers: ["slurm_plugin"]
-{%- endif %}
+# Temporarily disable test_protected_mode for the Slurm scheduler plugin
+#{%- if SCHEDULER_PLUGIN_TESTS is not defined or SCHEDULER_PLUGIN_TESTS == true %}
+#      - regions: ["eu-west-2"]
+#        instances: {{ common.INSTANCES_DEFAULT_X86 }}
+#        oss: ["alinux2"]
+#        schedulers: ["slurm_plugin"]
+#{%- endif %}
   test_slurm.py::test_fast_capacity_failover:
     dimensions:
       - regions: ["ap-east-1"]
