--- a/tests/integration-tests/tests/intel_hpc/test_intel_hpc/test_intel_hpc/pcluster.config.yaml
+++ b/tests/integration-tests/tests/intel_hpc/test_intel_hpc/test_intel_hpc/pcluster.config.yaml
@@ -30,6 +30,7 @@ Scheduling:
             - {{ instance }}
           {% else %}
           Instances:
+            - InstanceType: c5.18xlarge
             - InstanceType: c5n.18xlarge
             - InstanceType: c5n.metal
           {% endif %}
