Install efibootmgr before updating Ubuntu OS packages
This step is needed to unblock the first stage build
that is failing during the update of the `grub-efi-arm64` with the error:
```
Setting up grub-efi-arm64 (2.04-1ubuntu47.4) ...
Installing for arm64-efi platform.
grub-install: error: efibootmgr: not found.
```
This is a known issue: https://bugs.launchpad.net/ubuntu/+source/grub2-signed/+bug/1936857

The discarded alternative is to exclude some packages from the update:
```
sudo apt-mark hold grub-efi-arm64 grub-efi-arm64-bin grub-efi-arm64-signed
```

Signed-off-by: Enrico Usai <usai@amazon.com>

--- a/cli/src/pcluster/resources/imagebuilder/update_and_reboot.yaml
+++ b/cli/src/pcluster/resources/imagebuilder/update_and_reboot.yaml
@@ -103,6 +103,19 @@ phases:
                 update-grub
               fi
 
+      - name: InstallEfiBootManager
+        action: ExecuteBash
+        inputs:
+          commands:
+            - |
+              set -v
+              PLATFORM='{{ build.PlatformName.outputs.stdout }}'
+              ARCH=$(uname -m)
+              if [[ `echo ${!ARCH}` == 'aarch64' ]] && [[ ${!PLATFORM} == DEBIAN ]]; then
+                # temporary workaround to solve https://bugs.launchpad.net/ubuntu/+source/grub2-signed/+bug/1936857
+                apt-get -y install efibootmgr
+              fi
+
       - name: UpdateOS
         action: ExecuteBash
         inputs:
