--- a/tests/integration-tests/configs/common/common.yaml
+++ b/tests/integration-tests/configs/common/common.yaml
@@ -269,7 +269,7 @@ intel_hpc:
   test_intel_hpc.py::test_intel_hpc:
     dimensions:
       - regions: ["us-west-2"]
-        instances: ["c5n.18xlarge"]
+        instances: ["c5.18xlarge"]
         oss: ["centos7"]
         schedulers: ["slurm"]
 networking:
