Disable build_ami and runtime bake with ubuntu18 DLAMI in gov-cloud
Ubuntu18 DLAMI is not available in GovCloud

Signed-off-by: chenwany <chenwany@amazon.com>

--- a/tests/integration-tests/configs/develop.yaml
+++ b/tests/integration-tests/configs/develop.yaml
@@ -14,7 +14,7 @@ test-suites:
           schedulers: ["slurm"]
         - regions: ["us-gov-west-1"]
           instances: {{ common.INSTANCES_DEFAULT_X86 }}
-          oss: ["ubuntu1804", "ubuntu2004"]
+          oss: ["ubuntu2004"] # disable the ubuntu18 test because ubuntu18.04 DLAMI is not available in GovCloud
           schedulers: ["slurm"]
 #        - regions: ["us-east-1"]
 #          instances: {{ common.INSTANCES_DEFAULT_ARM }}
