--- a/tests/integration-tests/configs/develop.yaml
+++ b/tests/integration-tests/configs/develop.yaml
@@ -31,7 +31,7 @@ test-suites:
   efa:
     test_efa.py::test_efa:
       dimensions:
-        - regions: [ "us-gov-west-1" ]
+        - regions: [ "us-west-2" ]
           instances: [ "c5n.18xlarge" ]
           oss: [ "alinux2" ]
           schedulers: [ "slurm" ]
