Make integration test covering multiple NICS use Capacity Reservation
Signed-off-by: chenwany <chenwany@amazon.com>

--- a/tests/integration-tests/tests/multiple_nics/test_multiple_nics/test_multiple_nics/pcluster.config.ini
+++ b/tests/integration-tests/tests/multiple_nics/test_multiple_nics/test_multiple_nics/pcluster.config.ini
@@ -13,6 +13,12 @@ compute_instance_type = {{ instance }}
 initial_queue_size = 1
 maintain_initial_size = true
 vpc_settings = parallelcluster-vpc
+{% if instance == "p4d.24xlarge" %}
+# Needed to use the p4d capacity reservation
+additional_iam_policies = arn:aws:iam::aws:policy/AmazonEC2FullAccess
+post_install = s3://{{ bucket_name }}/run_instance_override.sh
+s3_read_resource = arn:aws:s3:::{{ bucket_name }}/*
+{% endif %}
 
 [vpc parallelcluster-vpc]
 vpc_id = {{ vpc_id }}
