Add support for ComputeConsoleLogging parameters in cluster configuration
Signed-off-by: chenwany <chenwany@amazon.com>

--- a/cli/tests/pcluster/example_configs/slurm.full.yaml
+++ b/cli/tests/pcluster/example_configs/slurm.full.yaml
@@ -200,6 +200,8 @@ Monitoring:
   Dashboards:
     CloudWatch:
       Enabled: true  # true
+  ComputeConsoleLoggingEnabled: True
+  ComputeConsoleLoggingMaxSampleSize: 150 # 100
 AdditionalPackages:
   IntelSoftware:
     IntelHpcPlatform: false
