--- a/cli/tests/pcluster/templates/test_cluster_stack/test_cluster_config_limits/slurm.full.all_resources.yaml
+++ b/cli/tests/pcluster/templates/test_cluster_stack/test_cluster_config_limits/slurm.full.all_resources.yaml
@@ -238,6 +238,8 @@ Monitoring:
   Dashboards:
     CloudWatch:
       Enabled: true
+  ComputeConsoleLoggingEnabled: True
+  ComputeConsoleLoggingMaxSampleSize: 123 # 100
 AdditionalPackages:
   IntelSoftware:
     IntelHpcPlatform: false
