--- a/tests/integration-tests/tests/createami/test_createami/test_build_image/image.config.yaml
+++ b/tests/integration-tests/tests/createami/test_createami/test_build_image/image.config.yaml
@@ -18,3 +18,10 @@ Build:
           Value: dummyBuildTag
 
 CustomS3Bucket: {{ bucket_name }}
+
+DeploymentSettings:
+    LambdaFunctionsVpcConfig:
+        SubnetIds:
+        - {{ private_subnet_id }}
+        SecurityGroupIds:
+        - {{ default_vpc_security_group_id }}
