Add to lambda vpc testing in private and no internet access integration tests Signed-off-by: Francesco Giordano <giordafr@amazon.it>
Signed-off-by: Francesco Giordano <giordafr@amazon.it>

--- a/tests/integration-tests/tests/networking/test_cluster_networking/test_cluster_in_no_internet_subnet/pcluster.config.yaml
+++ b/tests/integration-tests/tests/networking/test_cluster_networking/test_cluster_in_no_internet_subnet/pcluster.config.yaml
@@ -77,3 +77,9 @@ Tags:
     Value: String
   - Key: two
     Value: two22
+DeploymentSettings:
+  LambdaFunctionsVpcConfig:
+    SecurityGroupIds:
+    - {{ default_vpc_security_group_id }}
+    SubnetIds:
+    - {{ no_internet_subnet_id }}
