Add new integration test to verify OnNodeUpdate custom action behaviour
The test verifies:
* the `postupdate.sh` script is NOT executed at cluster creation time
* the `postupdate.sh` script is executed at update time with the right argument (`UPDATE-ARG1`)
* the custom bootstrap script and the arguments are updatable
* the `updated_postupdate.sh` is executed during second update with the right argument (`UPDATE-ARG2`)

Signed-off-by: Enrico Usai <usai@amazon.com>
Signed-off-by: Edoardo Antonini <eantonin@amazon.com>

--- a/tests/integration-tests/tests/update/test_update/test_update_slurm/pcluster.config.update.yaml
+++ b/tests/integration-tests/tests/update/test_update/test_update_slurm/pcluster.config.update.yaml
@@ -14,10 +14,16 @@ HeadNode:
     KeyName: {{ key_name }}
   Iam:
     S3Access:
+      - BucketName: {{ bucket }}
       - BucketName: {{ resource_bucket }}
         EnableWriteAccess: true
     AdditionalIamPolicies:
       - Policy: {{ additional_policy_arn }}
+  CustomActions:
+    OnNodeUpdated:
+      Script: s3://{{ bucket }}/scripts/updated_postupdate.sh
+      Args:
+        - UPDATE-ARG2
 Scheduling:
   Scheduler: slurm
   SlurmSettings:
