--- a/tests/integration-tests/tests/update/test_update/test_update_slurm/pcluster.config.yaml
+++ b/tests/integration-tests/tests/update/test_update/test_update_slurm/pcluster.config.yaml
@@ -14,12 +14,12 @@ HeadNode:
     KeyName: {{ key_name }}
   CustomActions:
     OnNodeUpdated:
-      Script: s3://{{ bucket }}/scripts/postupdate.sh
+      Script: s3://{{ resource_bucket }}/scripts/postupdate.sh
       Args:
         - UPDATE-ARG1
   Iam:
     S3Access:
-      - BucketName: {{ bucket }}
+      - BucketName: {{ resource_bucket }}
 Scheduling:
   Scheduler: slurm
   SlurmSettings:
@@ -32,11 +32,11 @@ Scheduling:
             Size: 40
       CustomActions:
         OnNodeStart:
-          Script: s3://{{ bucket }}/scripts/preinstall.sh
+          Script: s3://{{ resource_bucket }}/scripts/preinstall.sh
           Args:
             - QWE
         OnNodeConfigured:
-          Script: s3://{{ bucket }}/scripts/postinstall.sh
+          Script: s3://{{ resource_bucket }}/scripts/postinstall.sh
           Args:
             - RTY
       CapacityType: ONDEMAND
