Block cluster update when using a managed FSx and vpc_security_group_id is modified
The change in the `vpc_security_group_id` will trigger a creation of a new file system to replace the old one,
without preserving the existing data.

With this patch we're blocking the update communicating the potential data loss.
Users can anyway update the cluster with the force flag.

Signed-off-by: Enrico Usai <usai@amazon.com>

--- a/cli/tests/pcluster/config/test_config_patch/test_single_param_change/pcluster.config.ini
+++ b/cli/tests/pcluster/config/test_config_patch/test_single_param_change/pcluster.config.ini
@@ -17,6 +17,7 @@ maintain_initial_size = {{maintain_initial_size}}
 master_subnet_id = {{master_subnet_id}}
 compute_subnet_id = {{compute_subnet_id}}
 additional_sg = {{additional_sg}}
+vpc_security_group_id = {{vpc_security_group_id}}
 
 [ebs ebs-1]
 shared_dir={{shared_dir}}
