Run Python 3.6 tests on Ubuntu 20
The action was failing with the error "Version 3.6 with arch x64 not found"
The list of all available versions can be found here:
https://raw.githubusercontent.com/actions/python-versions/main/versions-manifest.json

This is a known issue when using `ubuntu-latest` because Ubuntu 22 does not have any
Python 3.6 version available. https://github.com/actions/setup-python/issues/544

Signed-off-by: Enrico Usai <usai@amazon.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
+        # To run Python 3.6 we can only use up to Ubuntu 20: https://github.com/actions/setup-python/issues/544
+        os: [ubuntu-20.04]
         name:
           - Python 3.6 Tests
           - Python 3.7 Tests
