Add DescribeStacks permission to Slurm HeadNode instance profile

--- a/tests/iam_policies/cluster-roles.cfn.yaml
+++ b/tests/iam_policies/cluster-roles.cfn.yaml
@@ -120,6 +120,7 @@ Resources:
               - Action:
                   - cloudformation:DescribeStackResource
                   - cloudformation:SignalResource
+                  - cloudformation:DescribeStacks
                 Effect: Allow
                 Resource: '*'
               - Action:
