Temporary commit to use p4d ODCR in the head node launch template
Signed-off-by: Enrico Usai <usai@amazon.com>

--- a/cloudformation/master-server-substack.cfn.yaml
+++ b/cloudformation/master-server-substack.cfn.yaml
@@ -283,6 +283,9 @@ Resources:
             - DisableMasterHyperthreadingViaCpuOptions
             - 1
             - !Ref 'AWS::NoValue'
+        CapacityReservationSpecification:
+          CapacityReservationTarget:
+            CapacityReservationId: cr-0fa65fcdbd597f551
         BlockDeviceMappings:
           - DeviceName: /dev/xvdba
             VirtualName: ephemeral0
