Change parallelcluster inline policy of Headnode
Added Resource prefix to the PassRole SID of parallelcluster Inline policy attached to HeadNode role.
Unit Test case change for checking the Resource path for PassRole SID.

--- a/cli/tests/pcluster/templates/test_cdk_builder_utils/test_iam_resource_prefix_build_in_cdk/resourcePrefix.both_path_n_role_prefix.yaml
+++ b/cli/tests/pcluster/templates/test_cdk_builder_utils/test_iam_resource_prefix_build_in_cdk/resourcePrefix.both_path_n_role_prefix.yaml
@@ -15,6 +15,8 @@ Scheduling:
       ComputeResources:
         - Name: compute_resource1
           InstanceType: t2.micro
+          MinCount: 1
+          MaxCount: 5
       Networking:
         SubnetIds:
           - subnet-12345678
