--- a/cli/tests/pcluster/templates/test_cdk_builder_utils/test_iam_resource_prefix_build_in_cdk/resourcePrefix.only_role_prefix.yaml
+++ b/cli/tests/pcluster/templates/test_cdk_builder_utils/test_iam_resource_prefix_build_in_cdk/resourcePrefix.only_role_prefix.yaml
@@ -15,6 +15,8 @@ Scheduling:
       ComputeResources:
         - Name: compute_resource1
           InstanceType: t2.micro
+          MinCount: 1
+          MaxCount: 5
       Networking:
         SubnetIds:
           - subnet-12345678
