Change failing test OS to ubuntu2004 on Arm from Centos7
Signed-off-by: David Pratt <davprat@amazon.com>

--- a/tests/integration-tests/configs/common/common.yaml
+++ b/tests/integration-tests/configs/common/common.yaml
@@ -162,7 +162,7 @@ create:
       - regions: ["ap-south-1"]
         instances: {{ common.INSTANCES_DEFAULT_ARM }}
         schedulers: ["slurm"]
-        oss: ["centos7"]
+        oss: ["ubuntu2004"]
   test_create.py::test_cluster_creation_timeout:
     dimensions:
       - regions: ["ap-northeast-2"]
